@@ -1,0 +1,45 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<setup>
+
+	<import defaults="true" />
+	
+  	<database id="s" url="jdbc:hsqldb:mem:s" driver="org.hsqldb.jdbcDriver" schema="PUBLIC" user="sa" />
+
+  	<database id="t" url="jdbc:hsqldb:mem:t" driver="org.hsqldb.jdbcDriver" schema="PUBLIC" user="sa" />
+
+	<execute uri="createTables.sql" target="s" />
+	<execute uri="createTables.sql" target="t" />
+	
+	<execute target="s">
+		insert into COUNTRY values (10, 'United States');
+		insert into COUNTRY values (20, 'Germany');
+		insert into STATE   values (110, 10, 'California');
+		insert into STATE   values (120, 10, 'Florida');
+		insert into STATE   values (210, 20, 'Bayern');
+		insert into STATE   values (220, 20, 'Hamburg');
+	</execute>
+	
+	<execute target="t">
+		insert into COUNTRY values (10, 'United States');
+		insert into STATE   values (110, 10, 'California');
+		insert into STATE   values (120, 10, 'Florida');
+	</execute>
+	
+	<bean id="idGen" class="IncrementalIdGenerator" />
+	
+	<transcodingTask defaultSource="s" target="t" identity="Transcoding-identity.xml">
+
+		<transcode table="country" selector="id != 10">
+			<id name="id" generator="idGen" />
+		</transcode>
+
+		<transcode table="state" selector="country_fk != 10">
+			<id name="id" generator="idGen" />
+		</transcode>
+
+	</transcodingTask>
+	
+	<iterate source="t" type="country" consumer="ConsoleExporter"/>
+	<iterate source="t" type="state"   consumer="ConsoleExporter"/>
+	
+</setup>
